SE GENERA VERSION SIMILAR AL 02

--- a/angular.json
+++ b/angular.json
@@ -147,6 +147,7 @@
     }
   },
   "cli": {
+    "analytics": "65395b19-9e8e-4cef-afb1-243af071ed74",
     "defaultCollection": "@ionic/angular-toolkit"
   },
   "schematics": {
