--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "@ionic-native/splash-screen": "^5.36.0",
     "@ionic-native/status-bar": "^5.36.0",
     "@ionic/angular": "^6.0.0",
+    "animate.css": "^4.1.1",
     "cordova-plugin-splashscreen": "^6.0.1",
     "cordova-plugin-statusbar": "^3.0.0",
     "date-fns": "^2.28.0",
